fix(core): icon and grid optimizations - remove icon animation events for Angular 12/zonejs performance - cache scroll container query for grid scroll hook - fix broken css selector for grid cell background

--- a/projects/elements/src/grid/cell/cell.css
+++ b/projects/elements/src/grid/cell/cell.css
@@ -12,7 +12,7 @@
 }
 
 [internal-host] {
-  background: color-mix(in oklab, var(--background, var(--mlv-sys-layer-canvas-background)) 100%, var(--mlv-sys-interaction-state-mix) var(--interaction-state-ratio, 0%));
+  background: color-mix(in oklab, var(--background, var(--mlv-sys-layer-canvas-background)) 100%, var(--mlv-sys-interaction-state-mix) var(--interaction-state-ratio, 0.01%)); /* 0.01 to prevent css optimizer from removing % type */
   color: var(--color);
   padding: var(--padding);
   height: var(--height);
